--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main id="news-container"></main>
 
   <script src="script.js" defer></script>
-  <h4>Made by Arihant..</h4>
+  <h4>Designed by Arihant..</h4>
 </body>
 </html>
 
